    - Standardized terrain vehicle speed
    - Refund all landfill when painting over sand islands
    - Added missing tech prerequisites
    - Reduced cost of Water Treatment tech
    - Hid recipe Wood Pellets > Carbon Dioxide
    - Hid redundant ore sorting recipes
    - Re-enabled Coal silo (Angel's Addons - Storage Options)
    - Reverted ore crystallization recipe icons
  Bugfixes:
    - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
    - Fixed localised name of Mad Clown's Ore crystallization recipes
---------------------------------------------------------------------------------------------------
Version: 0.5.4
Date: 14.05.2021
  Bugfixes:
    - Fixed multiplayer desync issue
---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: 06.03.2021
  Changes:
    - Buffed Lead 3
    - Added fuel value to tool tips for burnable fluids
    - Merged in A Sea Block Config mod
    - Added compatibility for MadClown01's Extended AngelBob Minerals
    - Reshuffled early game technology and recipe unlocks
    - Moved Clarifier from Water treatment to Washing 1
    - Removed Water treatment from startup techs
    - Reduced Hydrogen sulfide gas from Viscous mud water washing
    - Reduced lime and time required for Porus lime filters
    - Reduced time required for Sulfur air scrubbing
    - Reduced cost of mud landfill
    - Hid settings from other mods that have no effect with Sea Block
    - Removed bio sicence from Fish refugium 2
    - Set techs Desert farming 1, Swamp farming 1, and Temperate farming 1 to ignore tech cost modifier
    - Hid metal mixing furnaces if multi purpose furnaces are disabled
    - Renamed Metal mixing and Multi purpose furnaces to Recipe furnaces. They are exactly the same as regular furnaces except they need a recipe set
    - Renamed Bob's Assembling machines mod setting Multi purpose furnaces to Recipe furnaces