@@ -13,6 +13,7 @@ Date: ???
     - Hid redundant ore sorting recipes
     - Re-enabled Coal silo (Angel's Addons - Storage Options)
     - Reverted ore crystallization recipe icons
+    - Hid unreachable recipes and items
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
